fix letter spacing bug (#1009)

--- a/src/components/Heading/Heading.scss
+++ b/src/components/Heading/Heading.scss
@@ -29,6 +29,7 @@
 
 // Override tags styles
 .element-type-h1 {
+  letter-spacing: -1px;
   font-size: $h1-legacy-font-size;
   line-height: $h1-legacy-line-height;
   font-weight: var(--font-weight-bold);
@@ -44,6 +45,7 @@
 }
 
 .element-type-h2 {
+  letter-spacing: -1px;
   @include font-title();
   &.size-small,
   &.size-medium {
@@ -51,6 +53,7 @@
   }
 }
 .element-type-h3 {
+  letter-spacing: -1px;
   @include font-title-secondary();
   &.size-small,
   &.size-medium {
@@ -59,6 +62,7 @@
 }
 
 .element-type-h4 {
+  letter-spacing: -1px;
   @include font-subtitle();
 }
 
